--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd-linestickers",
-  "version": "0.6.2a",
+  "version": "0.6.3",
   "scripts": {
     "build": "gulp build --color",
 	"build:watch": "gulp build:watch --color"
