--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.6.3",
   "scripts": {
     "build": "gulp build --color",
-	"build:watch": "gulp build:watch --color"
+    "build:css": "gulp build:css --color",
+    "build:watch": "gulp build:watch --color"
   },
   "author": "Awakening",
   "private": true,
@@ -12,6 +13,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-util": "^0.5.5",
+    "gulp-sass": "^3.1.0",
     "pump": "^1.0.2"
   }
 }
