--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd-linestickers",
-  "version": "0.6.9с",
+  "version": "0.6.9d",
   "scripts": {
     "build": "gulp build --color",
     "build:css": "gulp build:css --color",
