--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Extends BetterDiscord emote menu to add LINE stickers tab.",
   "version": "0.7.0",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=none",
     "build:watch": "webpack --watch --mode=development"
   },
   "author": "Awakening",
@@ -13,20 +13,20 @@
   "contributors": [],
   "dependencies": {},
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^0.28.11",
-    "eslint": "^5.0.0",
+    "eslint": "^5.7.0",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.4",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "to-string-loader": "^1.1.5",
-    "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8"
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   }
 }
